fix overlapping div

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,8 +23,6 @@ a {
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
-  cursor: hand;
-  cursor: pointer;
 }
 
 a:hover {
@@ -79,7 +77,7 @@ p {
   height: 100%;
   min-height: 700px;
   color: #fff;
-  float: left;
+  left: 0;
 }
 
 .sidebar-wrapper a {
